# rustful-service

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  check_container.sh  compose.yml  os.sh  readme.md  test.sh
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  pr.yml
.gitub/workflows/: ci.yml
migrations/2023-11-21-063116_users/: up.sql
migrations/2024-06-09-041436_fakes/: down.sql  up.sql
src/: main.rs  schema.rs
src/common/: database.rs
src/controllers/: fake.rs  user_controller.rs
src/models/: fake.rs  user.rs
src/services/: fake.rs  user_service.rs
