[package]
name = "rustful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["chrono", "postgres", "uuid", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
once_cell = "1.18.0"
salvo = { version = "0.58.3", features = ["cors", "anyhow", "logging", "affix"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
