[package]
name = "rustful"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.0", features = ["chrono", "postgres", "uuid", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
once_cell = "1.19.0"
salvo = { version = "0.68.1", features = ["cors", "anyhow", "logging", "affix"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
